infrastructure/proxmox/httproute.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: proxmox
spec:
  clusterIP: None
  ports:
  - name: websecure
    port: 8006
    targetPort: 8006
    protocol: TCP

---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: proxmox
subsets:
  - addresses:
      - ip: 192.168.1.100
    ports:
      - port: 8006
        name: websecure
        protocol: TCP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: proxmox
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pve.relyq.dev
    external-dns.alpha.kubernetes.io/dns: cloudflare
spec:
  parentRefs:
    - name: gateway-internal
      namespace: traefik-internal
      sectionName: websecure
  hostnames:
    - pve.relyq.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: proxmox
          kind: Service
          port: 8006
